tests/paczka1/small_fuzzy/26538770.err
Error in line 5: wtw A632 64,09
Error in line 1: HjFXFO A522 51,3
